--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:7": "jest --root-dir 7-hours/"
+    "test:i": "jest --root-dir 7-hours/ && jest --root-dir 4-hours/"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
